--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Secular One", sans-serif;
+  color: white;
+  background: linear-gradient(
+    89.9deg,
+    rgb(208, 246, 255) 0.1%,
+    rgb(255, 237, 237) 47.9%,
+    rgb(255, 255, 231) 100.2%
+  );
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.weather-app {
+  background: #887575;
+  border-radius: 20px;
+  margin: 0 auto;
+  width: 750px;
+}
+.today {
+  margin-top: 80px;
+  margin-bottom: 20px;
+}
+.align-items-end {
+  margin: 0 auto;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
+}
+.weather-forecast-icon {
+  max-width: 50%;
+}
+.weather-forecast-temp-min {
+  opacity: 70%;
+}
+
+.github-link {
+  color: #887575;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 750px;
+  display: block;
 }
