--- a/src/Input.css
+++ b/src/Input.css
@@ -1,13 +1,13 @@
-button {
+.Input button {
   right: -210px;
   top: -37px;
 }
-.input-group {
+.Input .input-group {
   margin-top: 20px;
   margin-bottom: 0px;
   margin-left: 415px;
 }
-.btn-outline-secondary {
+.Input .btn-outline-secondary {
   color: white;
   border-color: #ced4da;
 }
