--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,12 @@ body {
   margin: 80px auto 20px;
   width: 750px;
 }
+
+@media (max-width: 575px) {
+  .App footer {
+    width: 300px;
+  }
+  .App .weather-app {
+    width: 300px;
+  }
+}
