--- a/src/Weather.css
+++ b/src/Weather.css
@@ -16,3 +16,9 @@
   margin: 20px;
   margin-left: 334px;
 }
+
+@media (max-width: 575px) {
+  .Weather .input-group {
+    margin-left: 27px;
+  }
+}
